Update and rename Database-management-system.html to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <span>DBMS</span>
         </div>
         <ul class="nav-links">
-            <li><a href="Database-management-system.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">Contact</a></li>
            </ul>
     </nav>
